syntax = "proto3";
package tronapi;

message TronTxInput {
    string raw_data = 2;
}

message TronTxOutput {
    string signature = 1;
}

message TronMessageInput {
    string message = 1;
    bool is_hex = 2;
    bool is_tron_header = 3;
    string version = 4;
}

message TronMessageOutput {
    string signature = 1;
}